      filtertest: Use ntohl() on the netmask to fix the -m option.
    Hurd:
      Support network capture devices too.
      Fix a few device activation bugs.
      Count and timestamp packets better.
      Add kernel filtering, fix userland filtering.
    OpenBSD:
      Use getprotobyname_r() correctly on OpenBSD.
    Linux:
      Do not use ether_hostton() from musl libc.
    DAG:
      Always set PCAP_IF_CONNECTION_STATUS_NOT_APPLICABLE.
      In dag_findalldevs() handle known errors better.
      Trust dag_get_stream_erf_types() to be available.
      Require the API to have 64-bit streams support.
      Make device descriptions more useful, make dagN conditional.
      Use PCAP_ERROR_NO_SUCH_DEVICE more in dag_activate().
      Validate capture device names better.
      Enumerate streams without trying to lock them.
      If the environment variable ERF_FCS_BITS is set, require it to be either
        0 or 16 or 32.  Likewise for ERF_DONT_STRIP_FCS (either 0 or 1).
      Remove FCS quirks specific to 4.2S and 4.23S.
      Fix packet filtering with low snaplen.
      Fix ps_drop for stream drop counters.
      Add experimental packet transmit support.
    SNF:
      Fix packet filtering with low snaplen.
      Require SNF_VERSION_API >= 0x0003.
      Improve device descriptions and flags.
      Fill pcap_if_t in more consistently.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 1.10.6 libpcap release (so far!)
    Source code:
      Fix "tcpdump -i <n>" for something-only libpcap builds.
      Remove some unneeded includes.
      pcapint_find_function() changed to return "void *" to avoid
        warnings.
      gencode: Fix an undefined behavior in gen_mcode().
      gencode: Add a missing free() in gen_scode().
    Packet filtering:
      Make the chunk allocator's alignment more general and
        platform-independent.
      IEEE 802.11: Fix three undefined behaviors in grammar.y.
    Linux:
      Fix check for mac80211 phydev.