@@ -103,6 +103,8 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Use getprotobyname_r() correctly on OpenBSD.
     Linux:
       Do not use ether_hostton() from musl libc.
+    Haiku:
+      Look for ethers(5) in /boot/system/settings/network/.
     DAG:
       Always set PCAP_IF_CONNECTION_STATUS_NOT_APPLICABLE.
       In dag_findalldevs() handle known errors better.
